# cppAsIs

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
01_HelloWorld/: CMakeLists.txt
02_SDL_Dynamic/: CMakeLists.txt
03_Game/: CMakeLists.txt
03_Game/include/: engine.hxx
03_Game/src/: game.cxx
03_MicroEngine/: CMakeLists.txt
03_MicroEngine/include/: engine.hxx
03_MicroEngine/src/: e_event.cxx  engine.cxx  logger.cxx
03_SDL_Init/: .gitignore  CMakeLists.txt
03_SDL_Init/src/: sdl.cpp
04_OpenGL_Triangle/: CMakeLists.txt  vertexes.txt
04_OpenGL_Triangle/include/: engine.hxx
04_OpenGL_Triangle/src/: engine.cxx  game.cxx
05_Animation/: CMakeLists.txt  config.json
05_Animation/include/: engine.hxx
05_Animation/src/: engine.cxx  game.cxx
05_Morphing/: vertexes.txt
05_Morphing/src/: game.cxx
05_Textures/: CMakeLists.txt  vertexes.txt
05_Textures/include/: engine.hxx
05_Textures/src/: engine.cxx  game.cxx
06_Many_Matrices_in_Shader/: CMakeLists.txt  engine.cxx  engine.hxx  game.cxx
06_Matrices/: CMakeLists.txt  engine.cxx  engine.hxx  game.cxx
06_Matrices_in_Shader/: engine.cxx  engine.hxx  game.cxx
07_Sound/: CMakeLists.txt
07_Sound/engine/include/: engine.hxx  engine_impl.hxx  gl_init.hxx  shader.hxx  texture.hxx
07_Sound/engine/src/: color.cxx  engine_impl.cxx  gl_init.cxx  matrix.cxx  shader.cxx  sound.cxx  texture.cxx  triangle.cxx  utils.cxx  vector.cxx
07_Sound/game/include/: quad.hxx  tank.hxx
07_Sound/game/src/: game.cxx  quad.cxx  tank.cxx
1_HelloWorld/src/: hello.cpp
2_SDL_Dynamic/: CMakeLists.txt
2_SDL_Dynamic/src/: sdl.cpp
2_SDL_Static/: CMakeLists.txt
src/: hello.cpp
